development/4-vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_hostnames = true
  enable_dns_support = true

  tags = merge(
    local.common_tags,
    tomap({ "Name" : "${local.prefix}" })
  )
}
